# finance_tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/application/dto/: account.py  transaction.py  user.py
src/application/services/: account_service.py  transaction_service.py  user_service.py
src/config/: config.py
src/domain/entities/: account.py  transaction.py  user.py
src/domain/errors/: base_errors.py  user_errors.py
src/domain/models/: account.py  transaction.py  user.py
src/domain/repositories/: account_repository.py  transaction_repository.py  unit_of_work.py  user_repository.py
src/infrastructures/db/: account_db.py  transaction_db.py  user_db.py
src/infrastructures/mappers/: account_mapper.py  transaction_mapper.py  user_mapper.py
src/infrastructures/uow/: sqlalchemy_uow.py
src/migrations/: env.py
src/migrations/versions/: 194ac0de058c_.py  855560344e29_.py  85a4f73ecdfe_.py  d59deafc4d52_.py
src/presentation/api/: accounts.py  dependencies.py  transactions.py  users.py
src/utils/: db.py  jwt_util.py
